2023-12-14T08:19:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7206197371 # 2167
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-14
* notice: last 14d: unq all: 14 49
* notice: prev accum: outdated-unq outdated-all / unq all: 496 2662 / 512 2715
* notice: next accum: outdated-unq outdated-all / unq all: 497 2666 / 512 2715
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-30] / []

2023-12-13T16:18:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7198059263 # 2165
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-13
* notice: last 14d: unq all: 15 53
* notice: prev accum: outdated-unq outdated-all / unq all: 494 2631 / 511 2714
* notice: next accum: outdated-unq outdated-all / unq all: 496 2662 / 512 2715
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-11-29] / [2023-12-13]

2023-12-13T01:07:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7189325038 # 2163
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-13
* notice: last 14d: unq all: 16 83
* notice: prev accum: outdated-unq outdated-all / unq all: 492 2624 / 510 2712
* notice: next accum: outdated-unq outdated-all / unq all: 494 2631 / 511 2714
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +9 -0 -0 / 3 9
* notice: removed / changed dates: [2023-11-28] / [2023-12-12]

2023-12-12T16:18:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7184268779 # 2162