@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-12-14T08:19:05Z",
+  "timestamp" : "2023-12-14T16:16:57Z",
   "count_outdated" : 2666,
   "uniques_outdated" : 497,
-  "count" : 2715,
-  "uniques" : 512,
+  "count" : 2718,
+  "uniques" : 513,
   "views" : [
     {
       "timestamp": "2023-12-02T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-14T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
