@@ -1,6 +1,6 @@
 {
-  "count": 49,
-  "uniques": 14,
+  "count": 52,
+  "uniques": 15,
   "views": [
     {
       "timestamp": "2023-12-02T00:00:00Z",
@@ -50,6 +50,11 @@
     {
       "timestamp": "2023-12-13T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-14T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
