@@ -1,3 +1,12 @@
+2023-12-14T16:16:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7211594928 # 2168
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-14
+* notice: last 14d: unq all: 15 52
+* notice: prev accum: outdated-unq outdated-all / unq all: 497 2666 / 512 2715
+* notice: next accum: outdated-unq outdated-all / unq all: 497 2666 / 513 2718
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2023-12-14]
+
 2023-12-14T08:19:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7206197371 # 2167
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-14
